# rust-cassowary

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/auth/: middleware.rs  mod.rs
supabase/: config.toml
tests/: api_tests.rs
