[package]
name = "rusty-cassowary"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.1", features = ["cors"] }
jsonwebtoken = "9.2.0"
dotenv = "0.15.0"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"
hyper = { version = "1.1.0", features = ["full"] }
regex = "1.10.3"
rodio = "0.17.1"

[dev-dependencies]
tempfile = "3.10.0"
tower = { version = "0.4", features = ["util"] }